--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<h1 id ="f1">Flowers photos</h1>
+		<img width ="400px" height ="500px" src ="https://images.unsplash.com/photo-1599463740831-a5015ef7b65a?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+		<p>The early purple orchid grows up to 40cm tall. Each plant can consist of up to 50 flowers. Its leaves are green with purple splodges. When they first bloom, these flowers have a sweet scent.</p>
+	</div>
+	<div>
+		<h1 id ="f2">Roses pictures</h1>
+		<img width ="400px" height="500px" src ="https://images.unsplash.com/photo-1578439231583-9eca0a363860?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+		<p>Their stems are usually prickly and their glossy, green leaves have toothed edges. Rose flowers vary in size and shape. They burst with colours ranging from pastel pink, peach, and cream, to vibrant yellow, orange, and red. Many roses are fragrant, and some produce berry-like fruits called hips.</p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
